<resources>
    <string name="app_name">MyTasks</string>
    <string name="str_tie_username">Nombre de usuario</string>
    <string name="str_tie_password">Contraseña</string>
    <string name="str_btn_login">Ingresar</string>
    <string name="str_txv_dontHaveAccount">¿No tienes cuenta?,</string>
    <string name="str_txv_createHere">crea una aquí</string>
    <string name="str_tie_email">Correo electronico</string>
    <string name="str_tie_name">Nombre</string>
    <string name="str_tie_user">Usuario</string>
    <string name="str_tier_password">Contraseña</string>
    <string name="str_tie_confirm_password">Confirmar contraseña</string>
    <string name="str_btn_createaccount">Crear cuenta</string>
    <string name="str_tb_tittle">Crear cuenta</string>
    <string name="str_tab_search">Buscar</string>
    <string name="str_tab_home">Inicio</string>
    <string name="str_tab_profile">Perfil</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
