<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jonmid.mytasks.LoginActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/ic_launcher"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="30dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/id_tie_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/str_tie_username"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/id_tie_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/str_tie_password"
                        android:inputType="textPassword"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/id_btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_btn_login"
                    android:layout_marginTop="30dp"
                    android:theme="@style/RaisedButtonDark"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/id_txv_dontHaveAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_txv_dontHaveAccount"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/id_txv_createHere"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_txv_createHere"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_toRightOf="@id/id_txv_dontHaveAccount"
                        android:layout_marginLeft="10dp"
                        android:onClick="goCreateAccount"/>

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
